--- a/.config/alacritty/alacritty.toml
+++ b/.config/alacritty/alacritty.toml
@@ -1,37 +1,38 @@
 live_config_reload = true
 working_directory = "None"
 
-# Themes --
-import = [ 
-  # -- Themes --
-  # "~/.config/alacritty/nordic.toml",
+import = [
+#"~/.config/alacritty/nordic.toml",
+#"~/.config/alacritty/Mariana.toml",
 ]
 
+[colors]
+transparent_background_colors = true
+draw_bold_text_with_bright_colors = true
+
 [window]
+startup_mode = "Maximized" #"Windowed" | "Maximized" | "Fullscreen"
 title = "Alacritty"
-#decorations = "none"
+dynamic_title = true
 blur = true
 opacity = 0.9
-padding.x = 10
-padding.y = 10
+padding.x = 2
+padding.y = 2
 
-#[window.dimensions]
-#columns = 155
-#lines = 35
+[cursor]
+style = { shape= "Beam", blinking = "on" }
+thickness = 0.2
+blink_interval = 600 #ms
+unfocused_hollow = false
 
-[cursor.style]
-shape= "Beam"
-#blinking = "Never"
-
-[colors]
-#transparent_background_colors = true
-draw_bold_text_with_bright_colors = true
+[scrolling]
+history = 2500
+multiplier =5
 
 [env]
 TERM = "xterm-256color"
 
 [font]
-#glyph_offset = { x = 1, y = 0 }
 normal.family = "JetBrainsMono"
 normal.style = "Regular"
 size = 12
