--- a/.config/fastfetch/config.jsonc
+++ b/.config/fastfetch/config.jsonc
@@ -2,11 +2,14 @@
 
 {
     "$schema": "https://github.com/fastfetch-cli/fastfetch/raw/dev/doc/json_schema.json",
-    "logo":{},
+    "logo": {
+        "source": "~/.config/fastfetch/astronaut.txt"
+            },
     "display": {
         "separator": " "
     },
     "modules": [
+        "break",
         {
             "type": "host",
             "key": "╭─ System ─╮",
