--- a/.config/fastfetch/config.jsonc
+++ b/.config/fastfetch/config.jsonc
@@ -13,40 +13,40 @@
         {
             "type": "host",
             "key": "╭─ System ─╮",
-            "keyColor": "magenta"
+            "keyColor": "blue"
         },
         {
             "type": "command",
             "key": "├─ OS Age ─┤",
             "text": "birth_install=$(stat -c %W /); current=$(date +%s); time_progression=$((current - birth_install)); days_difference=$((time_progression / 86400)); echo $days_difference days",
-            "keyColor": "magenta"
+            "keyColor": "blue"
         },
         {
             "type": "uptime",
             "key": "├─ Uptime ─┤",
-            "keyColor": "magenta"
+            "keyColor": "blue"
         },
         {
             "type": "cpu",
             "temp": true,
             "key": "├─ CPU ────┤",
-            "keyColor": "magenta"
+            "keyColor": "blue"
         },
         {
             "type": "gpu",
             "temp": true,
             "key": "├─ GPU ────┤",
-            "keyColor": "magenta"
+            "keyColor": "blue"
         },
         {
             "type": "memory",
             "key": "├─ RAM ────┤",
-            "keyColor": "magenta"
+            "keyColor": "blue"
         },
         {
             "type": "swap",
             "key": "╰─ Swap ───╯",
-            "keyColor": "magenta"
+            "keyColor": "blue"
         },
         "break",
 
@@ -54,27 +54,27 @@
             "type": "kernel",
             "key": "╭─ Kernel ───╮",
             "format": "{1} {2}",
-            "keyColor": "magenta"
+            "keyColor": "blue"
         },
         {
             "type": "shell",
             "key": "├─ Shell ────┤",
-            "keyColor": "magenta"
+            "keyColor": "blue"
         },
         {
             "type": "terminal",
             "key": "├─ Terminal ─┤",
-            "keyColor": "magenta"
+            "keyColor": "blue"
         },
         {
             "type": "de",
             "key": "├─ Desktop ──┤",
-            "keyColor": "magenta"
+            "keyColor": "blue"
         },
         {
             "type": "packages",
             "key": "╰─ Packages ─╯",
-            "keyColor": "magenta"
+            "keyColor": "blue"
         },
         "break",
         {
