--- a/.config/fastfetch/config.jsonc
+++ b/.config/fastfetch/config.jsonc
@@ -34,6 +34,7 @@
         },
         {
             "type": "gpu",
+            "detectionmethod": "pci",
             "temp": true,
             "key": "├─ GPU ────┤",
             "keyColor": "blue"
