--- a/.config/fastfetch/config.jsonc
+++ b/.config/fastfetch/config.jsonc
@@ -3,11 +3,12 @@
 {
     "$schema": "https://github.com/fastfetch-cli/fastfetch/raw/dev/doc/json_schema.json",
     "logo": {
-        "source": "~/.config/fastfetch/astronaut.txt"
+        "type": "file",
+        "source": "~/.config/fastfetch/astronaut.txt",
             },
     "display": {
-        "separator": " "
-    },
+                    "separator": " "
+               },
     "modules": [
         "break",
         {
