--- a/home/$USER/.config/fastfetch/config.jsonc
+++ b/home/$USER/.config/fastfetch/config.jsonc
@@ -78,6 +78,7 @@
             "key": "╰─ Packages ─╯",
             "keyColor": "blue"
         },
+//Sometimes the weather check can take 5-10 seconds
         "break",
         {
             "type": "weather",
