--- a/home/$USER/.config/fastfetch/config.jsonc
+++ b/home/$USER/.config/fastfetch/config.jsonc
@@ -5,6 +5,7 @@
     "logo": {
                 "type": "file",
                 "source": "~/.config/fastfetch/astronaut.txt",
+                "color": {"1": "magenta"}
             },
     "display": {
                     "separator": " "
