--- a/home/$USER/.config/fastfetch/config.jsonc
+++ b/home/$USER/.config/fastfetch/config.jsonc
@@ -1,17 +1,14 @@
-// Note that you must replace the image path to an existing image to display it.
-
 {
     "$schema": "https://github.com/fastfetch-cli/fastfetch/raw/dev/doc/json_schema.json",
     "logo": {
                 "type": "file",
                 "source": "~/.config/fastfetch/astronaut.txt",
-                "color": {"1": "magenta"}
+                "color": {"1": "white", "2": "magenta"}
             },
     "display": {
                     "separator": " "
                },
     "modules": [
-        "break",
         {
             "type": "host",
             "key": "╭─ System ─╮",
@@ -52,16 +49,21 @@
             "keyColor": "blue"
         },
         "break",
-
+        {
+            "type": "bios",
+            "key": "╭─ Bios ─────╮",
+            "format": "{1} {3} {4} ",
+            "keyColor": "blue"
+        },
         {
             "type": "kernel",
-            "key": "╭─ Kernel ───╮",
+            "key": "├─ Kernel ───┤",
             "format": "{1} {2}",
             "keyColor": "blue"
         },
         {
-            "type": "shell",
-            "key": "├─ Shell ────┤",
+            "type": "de",
+            "key": "├─ Desktop ──┤",
             "keyColor": "blue"
         },
         {
@@ -70,8 +72,8 @@
             "keyColor": "blue"
         },
         {
-            "type": "de",
-            "key": "├─ Desktop ──┤",
+            "type": "shell",
+            "key": "├─ Shell ────┤",
             "keyColor": "blue"
         },
         {
@@ -83,7 +85,7 @@
         {
             "type": "weather",
             "key": " ☀️ Weather 🌥 ",
-            "timeout": 3000,
+            "timeout": 1500,
             "keyColor": "white"
         },
     ]
