--- a/home/$USER/.config/alacritty/alacritty.toml
+++ b/home/$USER/.config/alacritty/alacritty.toml
@@ -1,11 +1,3 @@
-live_config_reload = true
-working_directory = "None"
-
-#Theme
-import = [
-#"~/.config/alacritty/your-theme.toml",
-]
-
 [colors]
 transparent_background_colors = true
 draw_bold_text_with_bright_colors = true
@@ -15,7 +7,7 @@ startup_mode = "Maximized" #"Windowed" | "Maximized" | "Fullscreen"
 title = "Alacritty"
 dynamic_title = true
 blur = true
-opacity = 0.9
+#opacity = 0.9 was a bit distracting
 padding.x = 5
 padding.y = 2
 
@@ -45,3 +37,10 @@ style = "Bold"
 [font.italic]
 family = "JetBrainsMono"
 style = "Italic"
+
+[general]
+live_config_reload = true
+working_directory = "None"
+
+#Theme
+#import = ["~/.config/alacritty/your-theme.toml",]
