--- a/home/$USER/.config/alacritty/alacritty.toml
+++ b/home/$USER/.config/alacritty/alacritty.toml
@@ -3,11 +3,11 @@ transparent_background_colors = true
 draw_bold_text_with_bright_colors = true
 
 [window]
-startup_mode = "Maximized" #"Windowed" | "Maximized" | "Fullscreen"
+startup_mode = "Maximized" # "Windowed" | "Maximized" | "Fullscreen"
 title = "Alacritty"
 dynamic_title = true
 blur = true
-#opacity = 0.9 was a bit distracting
+#opacity = 0.9 # distracting
 padding.x = 5
 padding.y = 2
 
@@ -28,7 +28,7 @@ TERM = "xterm-256color"
 [font]
 normal.family = "JetBrainsMono"
 normal.style = "Regular"
-size = 12
+size = 13
 
 [font.bold]
 family = "JetBrainsMono"
