style uptime text

--- a/home/$USER/.config/fastfetch/config.jsonc
+++ b/home/$USER/.config/fastfetch/config.jsonc
@@ -63,6 +63,7 @@
         {
             "type": "uptime",
             "key": "📡 Session     ",
+            "format": "{hours} hours and {minutes} minutes",
             "keyColor": "white"
         },
         {
